<resources>
    <string name="_default">Default</string>
    <string name="disable">disable</string>
    <string name="success">Successes!</string>
    <string name="failed">failed!</string>
    <string name="action_edit">Edit…</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Clear</string>
    <string name="action_remove">Remove</string>
    <string name="action_rename">Rename</string>
    <string name="action_create">Create</string>
    <string name="action_reset">Reset</string>
    <string name="action_add">Add</string>
    <string name="action_more">More</string>
    <string name="action_select">Select</string>
    <string name="action_select_all">Select all</string>
    <string name="action_unselect_all">Unselect all</string>
    <string name="action_invert_selection">Invert the selection</string>
    <string name="action_set">Set</string>
    <string name="action_load">Load</string>
    <string name="action_retry">Retry</string>
    <string name="action_download">Download</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_play_all">Play all</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_shuffle_mode">Shuffle Mode</string>
    <string name="action_repeat_mode">Repeat Mode</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_grant">Grant</string>
    <string name="action_grant_all">Grant All</string>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_search">Search</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play">Play</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_scan">Scan</string>
    <string name="action_clean">Clean</string>
    <string name="action_cancel_current_timer">Cancel current timer</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_add_to_black_list">Add to blacklist</string>
    <string name="action_item_layout">Item Layout</string>
    <string name="action_new_playlist">New playlist…</string>
    <string name="action_change_now_playing_screen">Change now playing screen</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_save_playlist">Save as file</string>
    <string name="action_save_playlists">Save as files</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_choose_lyrics">Choose Lyrics…</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_scan_media">Scan media</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="action_fast_rewind">Fast Rewind</string>
    <string name="action_fast_forward">Fast Forward</string>
    <string name="action_view_external_files">View external files</string>
    <string name="action_clean_missing_items">Clean all missing items</string>
    <string name="action_import">Import %1$s</string>
    <string name="action_export">Export %1$s</string>
    <string name="action_reboot">Reboot App</string>
    <string name="action_ignore_for_once">Ignore for once</string>
    <string name="action_check_for_updates">Check for updates</string>
    <string name="action_copy_to_clipboard">copy to clipboard</string>
    <string name="action_clear_all_preference">Clear all application settings</string>
    <string name="action_grant_permission">Grant Permission</string>
    <string name="action_grant_storage_permission">Grant External Storage Permission</string>
    <string name="action_refresh_database">Refresh Database</string>
    <string name="action_rebuild_database">Rebuild Database</string>
    <string name="action_delete_database">Delete Database</string>
    <string name="action_move_to_top">Move to top</string>
    <string name="action_move_to_bottom">Move to bottom</string>
    <string name="action_move_up">Move up</string>
    <string name="action_move_down">Move down</string>
    <string name="action_update_image">Update image</string>
    <string name="action_view_image">View image</string>
    <string name="action_remove_cover">Remove cover</string>
    <string name="action_reset_artist_image">Reset artist image</string>
    <string name="action_set_artist_image">Set artist image</string>
    <string name="action_clear_image_cache">Clear Image Cache</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_web_search">Web search</string>
    <string name="action_search_online">Search Online</string>
    <string name="action_theme_switch">Theme switch</string>
    <string name="action_send_bug_report">Send manually</string>
    <string name="action_exit">Exit</string>
    <string name="action_exit_without_saving">Exit without saving</string>
    <string name="label_song">Song</string>
    <string name="label_songs">Songs</string>
    <string name="label_playlists">Playlists</string>
    <string name="label_album">Album</string>
    <string name="label_albums">Albums</string>
    <string name="label_artist">Artist</string>
    <string name="label_artists">Artists</string>
    <string name="label_genre">Genre</string>
    <string name="label_genres">Genres</string>
    <string name="label_album_artist">Album artist</string>
    <string name="label_playing_queue">Playing queue</string>
    <string name="label_file">File</string>
    <string name="label_files">Files</string>
    <string name="label_folder">Folder</string>
    <string name="label_folders">Folders</string>
    <string name="label_file_playlists">File playlists</string>
    <string name="label_database_playlists">Database Playlists</string>
    <string name="label_other">Other</string>
    <string name="label_name">Name</string>
    <string name="label_misc">Misc</string>
    <string name="label_biography">Biography</string>
    <string name="label_wiki">Wiki</string>
    <string name="label_music_tags">Music Tags</string>
    <string name="label_year">Year</string>
    <string name="label_track">Track Number</string>
    <string name="label_track_total">Total Track Number</string>
    <string name="label_comment">Comment</string>
    <string name="label_composer">Composer</string>
    <string name="label_lyricist">Lyricist</string>
    <string name="label_disk_number">Disk Number</string>
    <string name="label_disk_number_total">Total Disk Number</string>
    <string name="label_rating">Rating</string>
    <string name="label_tag_format">Tag format</string>
    <string name="label_raw_tags">Raw Tags</string>
    <string name="label_lyrics">Lyrics</string>
    <string name="label_embedded_lyrics">embedded lyrics</string>
    <string name="label_external_lyrics">external lyrics</string>
    <string name="label_loaded">loaded</string>
    <string name="label_databases">Databases</string>
    <string name="label_path_selector">File Selector</string>
    <string name="label_single_item">Single Item</string>
    <string name="label_multiple_items">Multiple Items</string>
    <string name="label_app_language">Application Language</string>
    <string name="label_playing_queue_history">Playing Queue History</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_details">Details</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_last_modified_at">Last modified at</string>
    <string name="label_created_at">Created at</string>
    <string name="label_file_format">Format</string>
    <string name="label_track_length">Length</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_equalizer">Equalizer</string>
    <string name="label_storage_volumes">Storage Volumes</string>
    <string name="label_speed">Speed</string>
    <string name="label_sort_order">Sort order</string>
    <string name="label_grid_size">Grid size</string>
    <string name="label_grid_size_land">Grid size (land)</string>
    <string name="label_colored_footers">Colored footers</string>
    <string name="label_blacklist">Blacklist</string>
    <string name="label_excluded_paths">Excluded Paths</string>
    <string name="pref_header_colors">Colors</string>
    <string name="pref_header_now_playing_screen">Now playing</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_header_notification">Notification</string>
    <string name="pref_title_app_shortcuts">Colored app shortcuts</string>
    <string name="pref_title_classic_notification">Classic notification design</string>
    <string name="pref_title_colored_notification">Colored notification</string>
    <string name="pref_title_general_theme">General theme</string>
    <string name="pref_title_navigation_bar">Colored navigation bar</string>
    <string name="pref_title_now_playing_screen_appearance">Appearance</string>
    <string name="pref_title_remember_last_tab">Remember last tab</string>
    <string name="pref_title_synchronized_lyrics_show">Show synchronized lyrics</string>
    <string name="perf_title_fixed_tab_layout">Make all tabs fixed</string>
    <string name="pref_summary_classic_notification">Use the classic notification design.</string>
    <string name="pref_summary_colored_app_shortcuts">Colors the app shortcuts in the primary color.</string>
    <string name="pref_summary_colored_navigation_bar">Colors the navigation bar in the primary color.</string>
    <string name="pref_summary_colored_notification">Colors the notification in the album cover\'s vibrant color.</string>
    <string name="pref_summary_fixed_tab_layout">All category tabs would be arranged in a tiled layout without margins and will not be scrollable.</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories.</string>
    <string name="pref_summary_remember_last_tab">Go to the last opened tab on launch</string>
    <string name="pref_summary_synchronized_lyrics_show">Currently only synchronized lyrics in LRC format are supported. Either embedded or as a separate file.</string>
    <string name="primary_color">Primary color</string>
    <string name="accent_color">Accent color</string>
    <string name="primary_color_desc">The primary theme color</string>
    <string name="accent_color_desc">The accent theme color</string>
</resources>