<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <player.phonograph.preferences.basic.PreferenceCategoryX android:title="@string/pref_header_colors">

        <player.phonograph.preferences.basic.ListPreferenceX
            app:iconSpaceReserved="false"
            android:defaultValue="auto"
            android:entries="@array/pref_general_theme_list_titles"
            android:entryValues="@array/pref_general_theme_list_values"
            android:key="general_theme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_general_theme" />

        <player.phonograph.preferences.basic.ColorPreferenceX
            app:iconSpaceReserved="false"
            android:key="primary_color"
            android:persistent="false"
            android:summary="@string/primary_color_desc"
            android:title="@string/primary_color" />

        <player.phonograph.preferences.basic.ColorPreferenceX
            app:iconSpaceReserved="false"
            android:key="accent_color"
            android:persistent="false"
            android:summary="@string/accent_color_desc"
            android:title="@string/accent_color" />

        <player.phonograph.preferences.basic.SwitchPreferenceX
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="should_color_navigation_bar"
            android:persistent="false"
            android:summary="@string/pref_summary_colored_navigation_bar"
            android:title="@string/pref_title_navigation_bar" />

        <player.phonograph.preferences.basic.SwitchPreferenceX
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="should_color_app_shortcuts"
            android:summary="@string/pref_summary_colored_app_shortcuts"
            android:title="@string/pref_title_app_shortcuts" />

    </player.phonograph.preferences.basic.PreferenceCategoryX>

</androidx.preference.PreferenceScreen>
