<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.gramophone.preferences.basic.PreferenceCategoryX android:title="@string/pref_header_library">

        <com.kabouzeid.gramophone.preferences.LibraryPreferenceX
            app:iconSpaceReserved="false"
            android:key="library_categories"
            android:summary="@string/pref_summary_library_categories"
            android:title="@string/library_categories" />

        <com.kabouzeid.gramophone.preferences.basic.SwitchPreferenceX
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="fixed_tab_layout"
            android:summary="@string/pref_summary_fixed_tab_layout"
            android:title="@string/perf_title_fixed_tab_layout"/>

        <com.kabouzeid.gramophone.preferences.basic.SwitchPreferenceX
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="remember_last_tab"
            android:summary="@string/pref_summary_remember_last_tab"
            android:title="@string/pref_title_remember_last_tab" />

    </com.kabouzeid.gramophone.preferences.basic.PreferenceCategoryX>

</androidx.preference.PreferenceScreen>
