<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_remove_from_playlist"
        android:title="@string/action_remove_from_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details"
        android:title="@string/action_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/more_actions"
        android:title="@string/more_actions">
        <menu>
            <item
                android:id="@+id/action_tag_editor"
                android:title="@string/action_tag_editor"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_delete_from_device"
                android:title="@string/action_delete_from_device"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>